@@ -28,6 +28,7 @@
 #include <unistd.h>
 #define _GNU_SOURCE
 #include <getopt.h>
+#include <errno.h>
 
 #include <sys/types.h>
 
@@ -129,18 +130,64 @@ static void info_cb(int event, const char *msg, /*@unused@*/ int len, /*@unused@
 	}
 }
 
+/* create global uuid buffers */
+static const char *fbs_uuid = UUID_FBS;
+static const char *irmc_uuid = UUID_IRMC;
+static const char *s45_uuid = UUID_S45;
+
+/* parse UUID string to real bytes */
+static int parse_uuid(char *name, const char **uuid, int *uuid_len)
+{
+	if (name == NULL || *name == '\0' ||
+			!strncasecmp(name, "none", 4) ||
+			!strncasecmp(name, "null", 4) ||
+			!strncasecmp(name, "push", 4) ||
+			!strncasecmp(name, "goep", 4)) {
+		fprintf(stderr, "Suppressing FBS.\n");
+		if (uuid) *uuid = NULL;
+		if (uuid_len) *uuid_len = 0;
+		return 0;
+	}
+
+        if (!strncasecmp(name, "fbs", 3) || !strncasecmp(name, "ftp", 3)) {
+		fprintf(stderr, "Using FBS uuid.\n");
+		if (uuid) *uuid = fbs_uuid;
+		if (uuid_len) *uuid_len = sizeof(UUID_FBS);
+		return sizeof(UUID_FBS);
+	}
+
+        if (!strncasecmp(name, "sync", 4) || !strncasecmp(name, "irmc", 4)) {
+		fprintf(stderr, "Using SYNCH uuid.\n");
+		if (uuid) *uuid = irmc_uuid;
+		if (uuid_len) *uuid_len = sizeof(UUID_IRMC);
+		return sizeof(UUID_IRMC);
+	}
+
+        if (!strncasecmp(name, "s45", 3) || !strncasecmp(name, "sie", 3)) {
+		fprintf(stderr, "Using S45 uuid.\n");
+		if (uuid) *uuid = s45_uuid;
+		if (uuid_len) *uuid_len = sizeof(UUID_S45);
+		return sizeof(UUID_S45);
+	}
+
+	return -1;
+}
+
 /*@only@*/ /*@null@*/ static obexftp_client_t *cli = NULL;
 static int transport = OBEX_TRANS_IRDA;
 /*@only@*/ /*@null@*/ static char *tty = NULL;
 /*@only@*/ /*@null@*/ static char *btaddr = NULL;
-static int btchannel = 10;
+static int btchannel = -1;
 static int usbinterface = -1;
 /*@only@*/ /*@null@*/ static char *inethost = NULL;
-static int use_fbs=1;
+static const char *use_uuid = UUID_FBS;
+static int use_uuid_len = sizeof(UUID_FBS);
+static int use_conn=1;
+static int use_path=1;
 
 
 /* connect with given uuid. re-connect every time */
-static int cli_connect_uuid(const char* uuid)
+static int cli_connect_uuid(const char *uuid, int uuid_len)
 {
 	int retry;
 
@@ -153,29 +200,35 @@ static int cli_connect_uuid(const char* uuid)
 			exit(1);
 			//return FALSE;
 		}
+		if (!use_conn) {
+			cli->quirks &= ~OBEXFTP_CONN_HEADER;
+		}
+		if (!use_path) {
+			cli->quirks &= ~OBEXFTP_SPLIT_SETPATH;
+		}
 	}	
 	for (retry = 0; retry < 3; retry++) {
 
 		/* Connect */
                 switch (transport) {
 		case OBEX_TRANS_INET:
-			if (obexftp_connect_uuid (cli, inethost, 0, uuid) >= 0)
+			if (obexftp_connect_uuid (cli, inethost, 0, uuid, uuid_len) >= 0)
 				return TRUE;
 			break;
 		case OBEX_TRANS_IRDA:
-			if (obexftp_connect_uuid (cli, NULL, 0, uuid) >= 0)
+			if (obexftp_connect_uuid (cli, NULL, 0, uuid, uuid_len) >= 0)
 				return TRUE;
 			break;
 		case OBEX_TRANS_USB:
-			if (obexftp_connect_uuid (cli, NULL, usbinterface, uuid) >= 0)
+			if (obexftp_connect_uuid (cli, NULL, usbinterface, uuid, uuid_len) >= 0)
 				return TRUE;
 			break;
 		case OBEX_TRANS_CUSTOM:
-			if (obexftp_connect_uuid (cli, tty, 0, uuid) >= 0)
+			if (obexftp_connect_uuid (cli, tty, 0, uuid, uuid_len) >= 0)
 				return TRUE;
 			break;
 		case OBEX_TRANS_BLUETOOTH:
-			if (obexftp_connect_uuid (cli, btaddr, btchannel, uuid) >= 0)
+			if (obexftp_connect_uuid (cli, btaddr, btchannel, uuid, uuid_len) >= 0)
 				return TRUE;
 			break;
 		default:
@@ -192,20 +245,13 @@ static int cli_connect_uuid(const char* uuid)
 /* connect, possibly without fbs uuid. won't re-connect */
 static int cli_connect()
 {
-	const char *fbs;
-	
 	if (cli != NULL) {
 		return TRUE;
 	}
 
-        if (use_fbs)
-		fbs = UUID_FBS;
-	else {
-		fbs = NULL;
-		fprintf(stderr, "Suppressing FBS.\n");
-	}
-	if (!cli_connect_uuid(fbs))
+	if (!cli_connect_uuid(use_uuid, use_uuid_len))
 		exit(1);
+
 	return TRUE;
 }
 
@@ -220,11 +266,11 @@ static void cli_disconnect()
 	}
 }
 
-static void probe_device_uuid(const char *uuid)
+static void probe_device_uuid(const char *uuid, int uuid_len)
 {
 	int rsp[10];
 	
-	if (!cli_connect_uuid(uuid)) {
+	if (!cli_connect_uuid(uuid, uuid_len)) {
 		printf("couldn't connect.\n");
 		return;
 	}
@@ -299,13 +345,13 @@ static void probe_device_uuid(const char *uuid)
 static void probe_device()
 {
 	printf("\n=== Probing with FBS uuid.\n");
-	probe_device_uuid(UUID_FBS);
+	probe_device_uuid(UUID_FBS, sizeof(UUID_FBS));
 	
 	printf("\n=== Probing with S45 uuid.\n");
-	probe_device_uuid(UUID_S45);
+	probe_device_uuid(UUID_S45, sizeof(UUID_S45));
 	
 	printf("\n=== Probing without uuid.\n");
-	probe_device_uuid(NULL);
+	probe_device_uuid(NULL, 0);
 	
 	printf("\nEnd of probe.\n");
 	exit (0);
@@ -355,26 +401,34 @@ int main(int argc, char *argv[])
 	if (strstr(argv[0], "rm") != NULL)	most_recent_cmd = 'k';
 
 	/* preset the port from environment */
-	tty = getenv(OBEXFTP_CABLE);
-	if (tty != NULL) {
-		tty = strdup(tty);
-		transport = OBEX_TRANS_CUSTOM;
-	}
 	if (getenv(OBEXFTP_CHANNEL) != NULL) {
 		btchannel = atoi(getenv(OBEXFTP_CHANNEL));
 		usbinterface = atoi(getenv(OBEXFTP_CHANNEL));
 	}
-	if (getenv(OBEXFTP_BLUETOOTH) != NULL) {
-		discover_bt(getenv(OBEXFTP_BLUETOOTH), &btaddr, &btchannel);
-		transport = OBEX_TRANS_BLUETOOTH;
-	}
 	if (usbinterface >= 0) {
 		transport = OBEX_TRANS_USB;
+		fprintf(stderr, "Using USB: %d\n", usbinterface);
+	}
+	tty = getenv(OBEXFTP_CABLE);
+	if (tty != NULL) {
+		tty = strdup(tty);
+		transport = OBEX_TRANS_CUSTOM;
+		fprintf(stderr, "Using TTY: %s\n", tty);
+	}
+	btaddr = getenv(OBEXFTP_BLUETOOTH);
+	if (btaddr != NULL) {
+		if (btchannel <= 0 || strlen(btaddr) < (6*2+5) || btaddr[2]!=':')
+			discover_bt(btaddr, &btaddr, &btchannel);
+		else
+			btaddr = strdup(btaddr);
+		transport = OBEX_TRANS_BLUETOOTH;
+		fprintf(stderr, "Using BT: %s (%d)\n", btaddr, btchannel);
 	}
 	inethost = getenv(OBEXFTP_INET);
 	if (inethost != NULL) {
 		inethost = strdup(inethost);
 		transport = OBEX_TRANS_INET;
+		fprintf(stderr, "Using INET: %s\n", inethost);
 	}
 	       
 
@@ -390,8 +444,10 @@ int main(int argc, char *argv[])
 			{"usb",		optional_argument, NULL, 'u'},
 #endif
 			{"tty",		required_argument, NULL, 't'},
-			{"network",	required_argument, NULL, 'N'},
-			{"nofbs",	no_argument, NULL, 'F'},
+			{"network",	required_argument, NULL, 'n'},
+			{"uuid",	optional_argument, NULL, 'U'},
+			{"noconn",	no_argument, NULL, 'H'},
+			{"nopath",	no_argument, NULL, 'S'},
 			{"list",	optional_argument, NULL, 'l'},
 			{"chdir",	required_argument, NULL, 'c'},
 			{"mkdir",	required_argument, NULL, 'C'},
@@ -411,7 +467,7 @@ int main(int argc, char *argv[])
 			{0, 0, 0, 0}
 		};
 		
-		c = getopt_long (argc, argv, "-ib::B:u::t:N:FL::l::c:C:f:g:G:p:k:XPxm:Vvh",
+		c = getopt_long (argc, argv, "-ib::B:u::t:n:U::HSL::l::c:C:f:g:G:p:k:XPxm:Vvh",
 				 long_options, &option_index);
 		if (c == -1)
 			break;
@@ -469,7 +525,7 @@ int main(int argc, char *argv[])
 				fprintf(stderr, "Do you really want to use IrDA via ttys?\n");
 			break;
 
-		case 'N':
+		case 'n':
 			transport = OBEX_TRANS_INET;
 			if (inethost != NULL)
 				free (inethost); /* ok to to free an optarg? */
@@ -481,9 +537,23 @@ int main(int argc, char *argv[])
 					fprintf(stderr, "Please use dotted quad notation.\n");
 			}
 			break;
+			
+		case 'U':
+			/* handle severed optional option argument */
+			if (!optarg && argc > optind && argv[optind][0] != '-') {
+				optarg = argv[optind];
+				optind++;
+			}
+			if (parse_uuid(optarg, &use_uuid, &use_uuid_len) < 0)
+				fprintf(stderr, "Unknown UUID %s\n", optarg);
+			break;
 
-		case 'F':
-			use_fbs=0;      // ugly, needed to connect to the Nokia 7610 and alike
+		case 'H':
+			use_conn=0;
+			break;
+
+		case 'S':
+			use_path=0;
 			break;
 
 		case 'L':
@@ -603,7 +673,7 @@ int main(int argc, char *argv[])
 			if(cli_connect ()) {
 				/* for S65 */
 				(void) obexftp_disconnect (cli);
-				(void) obexftp_connect_uuid (cli, btaddr, btchannel, UUID_S45);
+				(void) obexftp_connect_uuid (cli, btaddr, btchannel, UUID_S45, sizeof(UUID_S45));
 				/* Retrieve Infos */
 				(void) obexftp_info(cli, 0x01);
 				(void) obexftp_info(cli, 0x02);
@@ -651,8 +721,10 @@ int main(int argc, char *argv[])
 				" -u, --usb [<intf>]          connect to a usb interface or list interfaces\n"
 #endif
 				" -t, --tty <device>          connect to this tty using a custom transport\n"
-				" -N, --network <host>        connect to this host\n"
-				" -F, --nofbs                 suppress fbs (for nokia)\n\n"
+				" -n, --network <host>        connect to this host\n\n"
+				" -U, --uuid                  use given uuid (none, FBS, IRMC, S45)\n"
+				" -H, --noconn                suppress connection ids (no conn header)\n"
+				" -S, --nopath                dont use setpaths (use path as filename)\n\n"
 				" -c, --chdir <DIR>           chdir\n"
 				" -C, --mkdir <DIR>           mkdir and chdir\n"
 				" -l, --list [<FOLDER>]       list current/given folder\n"
