@@ -13,7 +13,7 @@ WriteMakefile(
 # but we want rpath to be @libdir@ or @exec_prefix@/lib
     'LDDLFLAGS' =>      q[-shared -Wl,-L@top_builddir@obexftp/.libs -Wl,-rpath=@prefix@/lib],
     'LIBS'      =>	q[-L@top_builddir@obexftp/.libs -lobexftp -L@top_builddir@multicobex/.libs -lmulticobex -L@top_builddir@bfb/.libs -lbfb @OPENOBEX_LIBS@ @BLUETOOTH_LIBS@ @LIBS@],
-    'OBJECT'	=>	'client_wrap.o',
+    'OBJECT'	=>	'perl_wrap.o',
     'NAME'      =>	'OBEXFTP',
     'FIRST_MAKEFILE'      =>	'Makefile.perl',
 ) ;
