@@ -1,3 +1,7 @@
+2005-12-12  Christian W. Zuckschwerdt  <zany@triq.net>
+
+	* Added perl, python and tcl binding with swig.
+
 2005-09-15  Christian W. Zuckschwerdt  <zany@triq.net>
 
 	* Quick iconv hack. Needs to be done in openobex.
